--- a/tmux.conf
+++ b/tmux.conf
@@ -20,8 +20,8 @@ set-window-option -g xterm-keys on # allow alt, ctrl, shift, ... keys
 set -g focus-events on  # at least for neovim autoread
 set -g mouse on
 
-# set -g default-terminal "screen-256color" # for compability
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color" # for compability
+#set -g default-terminal "tmux-256color"
 # set -sa terminal-overrides ',xterm-256color:RGB'
 # set -ga terminal-overrides ',xterm-256color:Tc'
 
